examples/checker_tests/good/serenum-signed.p4
enum bit<8> E1 { e1 = 0 }
enum int<8> E2 { e2 = 0 }