examples/checker_tests/bad/duplicate-enum.p4
enum bit<8> E {
  e1 = 6
}
enum bit<8> E {
   one = 1
}